OPHYK-1113 fix type warnings